# naive-raytracer

./: Cargo.toml  README.md
src/: camera.rs  light.rs  main.rs  plane.rs  screen.rs
